fix: remove extra padding

--- a/assets/featured-products.css
+++ b/assets/featured-products.css
@@ -18,27 +18,14 @@
 .yc-featured-products .product-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  gap: 20px;
   justify-content: center;
   overflow: hidden;
   align-items: stretch;
 }
 @media (min-width: 768px) {
   .yc-featured-products .product-list {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-    padding: 0 40px;
-  }
-}
-@media (min-width: 992px) {
-  .yc-featured-products .product-list {
-    grid-template-columns: repeat(3, 1fr);
-    padding: 0 70px;
-  }
-}
-@media (min-width: 1200px) {
-  .yc-featured-products .product-list {
-    padding: 0 150px;
+    gap: 29px;
   }
 }
 .yc-featured-products .product-list .product-block {
@@ -49,7 +36,6 @@
   position: relative;
 }
 .yc-featured-products .product-list .product-block .product-thumbnail {
-  border: 1px solid #EFEFEF;
   border-radius: 3px;
   position: relative;
   overflow: hidden;
@@ -102,8 +88,7 @@
 }
 .yc-featured-products .product-list .product-block .prices {
   display: flex;
-  flex-direction: column;
-  align-items: start;
+  align-items: center;
   gap: 7px;
   margin-top: 12px;
   padding: 0 6px;
@@ -117,7 +102,7 @@
 }
 @media (min-width: 992px) {
   .yc-featured-products .product-list .product-block .prices {
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
   }
 }
