--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,7 +30,7 @@ body {
   display: none !important;
 }
 .container {
-  max-width: 1440px !important;
+  max-width: 1142px !important;
   margin: 0 auto;
   padding: 0 20px;
 
